// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loaded approved role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c19 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #00BFA5;
  border-radius: 50%;
}

.c21 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c25 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c27 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c34 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c26 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
  margin-top: 24px;
}

.c26:hover,
.c26:focus {
  background: #B29DFF;
}

.c26:active {
  background: #C5B6FF;
}

.c26:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c24 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c29 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c31 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c20 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #00BFA5;
  color: #000000;
  font-size: 10px;
}

.c32 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #00BFA5;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c33 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c22 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c15 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c14 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c30 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c28 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="success"
              style="font-weight: bold;"
            >
              APPROVED
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  kaco
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  ziuzzow
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                24 hours
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c9"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                2 hours ago
              </span>
            </div>
          </div>
          <div
            class="c9"
          >
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c19"
                style="display: flex;"
              >
                <span
                  class="c20 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c9"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  approved
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c21"
              style="position: relative;"
            >
              <div
                class="c22"
              >
                <div
                  class="c23"
                >
                  alice
                </div>
                <div
                  class="c24"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c25"
              >
                Approving for developer role not admin. Admins access is not needed for this request.
              </div>
            </div>
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c19"
                style="display: flex;"
              >
                <span
                  class="c20 icon icon-circlecheck"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M16.2803 10.2803C16.5732 9.98744 16.5732 9.51256 16.2803 9.21967C15.9874 8.92678 15.5126 8.92678 15.2197 9.21967L10.5 13.9393L8.78033 12.2197C8.48744 11.9268 8.01256 11.9268 7.71967 12.2197C7.42678 12.5126 7.42678 12.9874 7.71967 13.2803L9.96967 15.5303C10.2626 15.8232 10.7374 15.8232 11.0303 15.5303L16.2803 10.2803Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c9"
              >
                <b>
                  test-long-user-name@testing.com
                </b>
                 
                <span>
                  approved
                   this request 
                  1 minute ago
                </span>
              </div>
            </div>
            
          </div>
        </div>
      </div>
      <button
        class="c26"
        kind="primary"
      >
        assume roles
      </button>
    </div>
    <div
      class="c27"
    >
      <div
        class="c28"
      >
        <div
          class="c29"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c32"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c33"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c30"
      >
        <div
          class="c31"
          style="white-space: nowrap; max-width: 200px;"
          title="test-long-user-name@testing.com"
        >
          test-long-user-name@testing.com
        </div>
        <span
          class="c32"
          font-size="0"
          font-weight="bold"
          kind="success"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c34"
      >
        <div
          class="c35"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded denied role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c17 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c19 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c23 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c24 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #FF6257;
  border-radius: 50%;
}

.c26 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c33 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c13 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c13:hover,
.c13:focus {
  background: rgba(255,255,255,0.07);
}

.c13:active {
  background: rgba(255,255,255,0.13);
}

.c13:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c21 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c28 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c34 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c18 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c25 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: #FFFFFF;
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FF6257;
  color: #000000;
  font-size: 10px;
}

.c31 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FF6257;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c32 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c16 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c20 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c15 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c14 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c29 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c27 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="danger"
              style="font-weight: bold;"
            >
              DENIED
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
                <div
                  class="c10"
                  kind="secondary"
                >
                  ruhh
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                20 hours
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <button
              class="c13"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c14"
          style="position: relative;"
        >
          <div
            class="c15"
          />
          <div
            class="c16"
            style="position: relative;"
          >
            <div
              class="c17"
              style="display: flex;"
            >
              <span
                class="c18 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c9"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                35 minutes ago
              </span>
            </div>
          </div>
          <div
            class="c19"
            style="position: relative;"
          >
            <div
              class="c20"
            >
              <div
                class="c21"
              >
                Sam
              </div>
              <div
                class="c22"
              >
                35 minutes ago
              </div>
            </div>
            <div
              class="c23"
            >
              Some short request reason
            </div>
          </div>
          <div
            class="c9"
          >
            <div
              class="c16"
              style="position: relative;"
            >
              <div
                class="c24"
                style="display: flex;"
              >
                <span
                  class="c25 icon icon-circlecross"
                  color="light"
                >
                  <svg
                    fill="currentColor"
                    height="26"
                    viewBox="0 0 24 24"
                    width="26"
                  >
                    <path
                      d="M15.5303 8.46967C15.8232 8.76256 15.8232 9.23744 15.5303 9.53033L13.0607 12L15.5303 14.4697C15.8232 14.7626 15.8232 15.2374 15.5303 15.5303C15.2374 15.8232 14.7626 15.8232 14.4697 15.5303L12 13.0607L9.53033 15.5303C9.23744 15.8232 8.76256 15.8232 8.46967 15.5303C8.17678 15.2374 8.17678 14.7626 8.46967 14.4697L10.9393 12L8.46967 9.53033C8.17678 9.23744 8.17678 8.76256 8.46967 8.46967C8.76256 8.17678 9.23744 8.17678 9.53033 8.46967L12 10.9393L14.4697 8.46967C14.7626 8.17678 15.2374 8.17678 15.5303 8.46967Z"
                    />
                    <path
                      clip-rule="evenodd"
                      d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                      fill-rule="evenodd"
                    />
                  </svg>
                </span>
              </div>
              <div
                class="c9"
              >
                <b>
                  alice
                </b>
                 
                <span>
                  denied
                   this request 
                  26 hours ago
                </span>
              </div>
            </div>
            <div
              class="c19"
              style="position: relative;"
            >
              <div
                class="c20"
              >
                <div
                  class="c21"
                >
                  alice
                </div>
                <div
                  class="c22"
                >
                  26 hours ago
                </div>
              </div>
              <div
                class="c23"
              >
                Not today
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c26"
    >
      <div
        class="c27"
      >
        <div
          class="c28"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c29"
      >
        <div
          class="c30"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c31"
          font-size="0"
          font-weight="bold"
          kind="danger"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c29"
      >
        <div
          class="c30"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c32"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c33"
      >
        <div
          class="c34"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending role based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c20 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c25 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c26 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c28 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c36 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c40 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c46 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c14:hover,
.c14:focus {
  background: rgba(255,255,255,0.07);
}

.c14:active {
  background: rgba(255,255,255,0.13);
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c39 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c39:hover,
.c39:focus {
  background: #B29DFF;
}

.c39:active {
  background: #C5B6FF;
}

.c39:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c27 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c35 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c42 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c44 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c47 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c19 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c37 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c45 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c17 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c21 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c29 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c30 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c33 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c31 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c32 {
  opacity: 1;
}

.c34 {
  opacity: 0.5;
}

.c38 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c38::placeholder {
  color: rgba(255,255,255,0.54);
}

.c38:hover,
.c38:focus,
.c38:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c16 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c15 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 10px;
  margin: 0px;
  margin-left: 24px;
  font-style: italic;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c43 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c41 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  admin
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                35 minutes
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13"
              font-size="0"
            >
              Request expires in 
              2 hours
            </div>
            <button
              class="c14"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c15"
          style="position: relative;"
        >
          <div
            class="c16"
          />
          <div
            class="c17"
            style="position: relative;"
          >
            <div
              class="c18"
              style="display: flex;"
            >
              <span
                class="c19 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c9"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c20"
            style="position: relative;"
          >
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                Sam
              </div>
              <div
                class="c23"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c24"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
          </div>
          <div
            class="c25"
            style="position: relative;"
          >
            <div
              class="c26"
            >
              <div
                class="c27"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c24"
            >
              <div
                class="c28"
              >
                <div
                  class="c29"
                >
                  <label
                    class="c30"
                  >
                    <input
                      checked=""
                      class="c31"
                      name="requestState"
                      type="radio"
                      value="DENIED"
                    />
                    <span
                      class="c32"
                    >
                      Reject request
                    </span>
                  </label>
                  <label
                    class="c30"
                  >
                    <input
                      class="c31"
                      name="requestState"
                      type="radio"
                      value="APPROVED"
                    />
                    <span
                      class="c32"
                    >
                      Approve short-term access
                      
                    </span>
                  </label>
                  <label
                    class="c33"
                  >
                    <input
                      class="c31"
                      disabled=""
                      name="requestState"
                      type="radio"
                      value="PROMOTED"
                    />
                    <span
                      class="c34"
                    >
                      <span>
                        <div
                          class="c4"
                        >
                          <div
                            class="c35"
                          >
                            Approve long-term access via Access List with the requested resources
                          </div>
                          
                        </div>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="c36"
              >
                <label
                  class="c37"
                  font-size="0"
                >
                  Message
                </label>
                <textarea
                  class="c38"
                  color="text.main"
                  height="150px"
                  placeholder="Optional message..."
                  width="100%"
                />
              </div>
              <button
                class="c39"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c40"
    >
      <div
        class="c41"
      >
        <div
          class="c42"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c43"
      >
        <div
          class="c44"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c45"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c43"
      >
        <div
          class="c44"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c45"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c46"
      >
        <div
          class="c47"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`loaded pending search based request state 1`] = `
.c1 {
  box-sizing: border-box;
  max-width: 860px;
  min-width: 515px;
  margin-right: 32px;
  width: 100%;
  flex: 1 1 auto;
}

.c9 {
  box-sizing: border-box;
}

.c18 {
  box-sizing: border-box;
  margin-left: 16px;
  margin-right: 8px;
  padding: 3px;
  background-color: #344179;
  border-radius: 50%;
}

.c20 {
  box-sizing: border-box;
  margin-top: 16px;
  border: 1px solid;
  border-color: #0C143D;
}

.c24 {
  box-sizing: border-box;
  padding: 16px;
  background-color: #344179;
}

.c28 {
  box-sizing: border-box;
  margin-top: 48px;
  border: 1px solid;
  border-color: #0C143D;
}

.c29 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
}

.c31 {
  box-sizing: border-box;
  margin-bottom: 16px;
}

.c39 {
  box-sizing: border-box;
  margin-bottom: 24px;
}

.c43 {
  box-sizing: border-box;
  min-width: 120px;
  flex: 0 1 260px;
}

.c49 {
  box-sizing: border-box;
  margin-left: 4px;
  margin-top: 16px;
}

.c14 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #FFFFFF;
  background: rgba(255,255,255,0);
  border: 1px solid rgba(255,255,255,0.36);
  font-size: 10px;
  min-height: 24px;
  padding: 0px 16px;
  margin-left: 16px;
  width: 60px;
}

.c14:hover,
.c14:focus {
  background: rgba(255,255,255,0.07);
}

.c14:active {
  background: rgba(255,255,255,0.13);
}

.c14:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c42 {
  line-height: 1.5;
  margin: 0;
  display: inline-flex;
  justify-content: center;
  align-items: center;
  box-sizing: border-box;
  border: none;
  border-radius: 4px;
  cursor: pointer;
  font-family: inherit;
  font-weight: 600;
  outline: none;
  position: relative;
  text-align: center;
  text-decoration: none;
  text-transform: uppercase;
  transition: all 0.3s;
  -webkit-font-smoothing: antialiased;
  color: #000000;
  background: #9F85FF;
  min-height: 32px;
  font-size: 12px;
  padding: 0px 24px;
}

.c42:hover,
.c42:focus {
  background: #B29DFF;
}

.c42:active {
  background: #C5B6FF;
}

.c42:disabled {
  background: rgba(255,255,255,0.12);
  color: rgba(255,255,255,0.3);
  cursor: auto;
}

.c7 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 4px;
}

.c8 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c11 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
}

.c22 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 8px;
}

.c23 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 300;
  font-size: 12px;
  line-height: 24px;
  margin: 0px;
}

.c30 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 16px;
}

.c38 {
  overflow: hidden;
  text-overflow: ellipsis;
  margin: 0px;
}

.c45 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 14px;
  line-height: 24px;
  margin: 0px;
  margin-right: 8px;
}

.c47 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 600;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  margin-right: 16px;
}

.c50 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-weight: 400;
  font-size: 12px;
  line-height: 16px;
  margin: 0px;
  color: rgba(255,255,255,0.72);
}

.c19 {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  color: rgba(255,255,255,0.54);
}

.c10 {
  box-sizing: border-box;
  border-radius: 10px;
  display: inline-block;
  font-size: 10px;
  font-weight: 500;
  padding: 0 8px;
  margin: 1px 0;
  vertical-align: middle;
  background-color: rgba(255,255,255,0.07);
  color: #FFFFFF;
  font-weight: 400;
  margin-right: 4px;
}

.c40 {
  color: #FFFFFF;
  display: block;
  font-size: 12px;
  width: 100%;
  margin-bottom: 4px;
}

.c5 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  margin-right: 16px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background: #FFAB00;
  color: #000000;
  font-size: 10px;
}

.c48 {
  box-sizing: border-box;
  border-radius: 100px;
  display: inline-flex;
  align-items: center;
  justify-content: center;
  min-height: 16px;
  line-height: 1.4;
  padding: 0 8px;
  font-size: 10px;
  font-weight: 500;
  text-transform: uppercase;
  padding: 0px;
  background: #FFAB00;
  color: #000000;
  width: 10px;
  font-size: 10px;
}

.c0 {
  box-sizing: border-box;
  display: flex;
}

.c4 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
}

.c6 {
  box-sizing: border-box;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
}

.c12 {
  box-sizing: border-box;
  flex: 1;
  display: flex;
  align-items: center;
  justify-content: flex-end;
  flex-wrap: wrap-reverse;
}

.c17 {
  box-sizing: border-box;
  padding-top: 16px;
  display: flex;
  align-items: center;
}

.c21 {
  box-sizing: border-box;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 4px;
  padding-bottom: 4px;
  background-color: #0C143D;
  display: flex;
  align-items: baseline;
}

.c32 {
  box-sizing: border-box;
  display: flex;
  flex-direction: column;
  gap: 8px;
}

.c26 {
  background: #222C59;
  border-collapse: collapse;
  border-spacing: 0;
  border-style: hidden;
  font-size: 12px;
  width: 100%;
}

.c26 > thead > tr > th,
.c26 > tbody > tr > th,
.c26 > tfoot > tr > th,
.c26 > thead > tr > td,
.c26 > tbody > tr > td,
.c26 > tfoot > tr > td {
  padding: 8px 8px;
  vertical-align: middle;
}

.c26 > thead > tr > th:first-child,
.c26 > tbody > tr > th:first-child,
.c26 > tfoot > tr > th:first-child,
.c26 > thead > tr > td:first-child,
.c26 > tbody > tr > td:first-child,
.c26 > tfoot > tr > td:first-child {
  padding-left: 24px;
}

.c26 > thead > tr > th:last-child,
.c26 > tbody > tr > th:last-child,
.c26 > tfoot > tr > th:last-child,
.c26 > thead > tr > td:last-child,
.c26 > tbody > tr > td:last-child,
.c26 > tfoot > tr > td:last-child {
  padding-right: 24px;
}

.c26 > tbody > tr > td {
  vertical-align: middle;
}

.c26 > thead > tr > th {
  background: rgba(255,255,255,0.07);
  color: #FFFFFF;
  cursor: pointer;
  font-size: 10px;
  font-weight: 400;
  padding-bottom: 0;
  padding-top: 0;
  text-align: left;
  opacity: 0.75;
  text-transform: uppercase;
  white-space: nowrap;
}

.c26 > thead > tr > th svg {
  height: 12px;
}

.c26 > tbody > tr > td {
  color: #FFFFFF;
  line-height: 16px;
}

.c26 tbody tr {
  border-bottom: 1px solid rgb(49,58,100);
}

.c26 tbody tr:hover {
  background-color: rgba(255,255,255,0.07);
}

.c33 {
  display: flex;
  align-items: center;
  cursor: pointer;
}

.c36 {
  display: flex;
  align-items: center;
  cursor: not-allowed;
}

.c34 {
  margin: 0 8px 0 0;
  accent-color: #9F85FF;
  cursor: inherit;
}

.c35 {
  opacity: 1;
}

.c37 {
  opacity: 0.5;
}

.c41 {
  box-sizing: border-box;
  max-width: 500px;
  padding: 8px;
  height: 150px;
  width: 100%;
  color: #FFFFFF;
  border: 1px solid;
  border-radius: 4px;
  border-color: rgba(255,255,255,0.54);
  outline: none;
  background: transparent;
}

.c41::placeholder {
  color: rgba(255,255,255,0.54);
}

.c41:hover,
.c41:focus,
.c41:active {
  border: 1px solid rgba(255,255,255,0.72);
}

.c16 {
  position: absolute;
  height: calc(100% - 34px);
  width: 2px;
  top: 0;
  left: 55px;
  border-left: 2px solid rgba(255,255,255,0.07);
}

.c27 {
  width: 90%;
}

.c27 > tbody > tr > td {
  vertical-align: middle;
}

.c15 {
  position: relative;
  background-color: #222C59;
  padding: 24px;
  padding-top: 0;
  border-bottom-left-radius: 16px;
  border-bottom-right-radius: 16px;
}

.c13 {
  overflow: hidden;
  text-overflow: ellipsis;
  font-size: 10px;
  margin: 0px;
  margin-left: 24px;
  font-style: italic;
}

.c2 {
  box-sizing: border-box;
  box-shadow: 0px 2px 1px -1px rgba(0,0,0,0.2),0px 1px 1px rgba(0,0,0,0.14),0px 1px 3px rgba(0,0,0,0.12);
}

.c3 {
  box-sizing: border-box;
  padding: 16px;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  display: flex;
  background: #344179;
}

.c25 {
  box-sizing: border-box;
  padding-bottom: 16px;
  padding-left: 16px;
  padding-right: 0px;
  padding-top: 0px;
  background-color: #344179;
  margin: 0 auto;
}

.c46 {
  box-sizing: border-box;
  margin-bottom: 8px;
  padding-left: 16px;
  padding-right: 16px;
  padding-top: 8px;
  padding-bottom: 8px;
  border: 1px solid;
  border-radius: 2px;
  border-color: #222C59;
  display: flex;
  align-items: center;
  justify-content: space-between;
  background: rgba(255,255,255,0.07);
}

.c44 {
  box-sizing: border-box;
  margin-bottom: 16px;
  padding-bottom: 16px;
  border-bottom: 1px solid;
  display: flex;
  border-color: rgba(255,255,255,0.13);
}

<div>
  <div
    class="c0"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
      >
        <div
          class="c3"
        >
          <div
            class="c4"
          >
            <span
              class="c5"
              font-size="0"
              font-weight="bold"
              kind="warning"
              style="font-weight: bold;"
            >
              PENDING
            </span>
            <div
              class="c6"
            >
              <div
                class="c7"
                style="max-width: 120px;"
                title="Sam"
              >
                Sam
              </div>
              <div
                class="c8"
                style="flex-shrink: 0; white-space: nowrap;"
              >
                is requesting roles:
              </div>
              <div
                class="c9"
              >
                <div
                  class="c10"
                  kind="secondary"
                >
                  test
                </div>
              </div>
              <div
                class="c11"
              >
                for 
                35 minutes
              </div>
            </div>
          </div>
          <div
            class="c12"
          >
            <div
              class="c13"
              font-size="0"
            >
              Request expires in 
              1 hour
            </div>
            <button
              class="c14"
              kind="border"
              width="60px"
            >
              Delete
            </button>
          </div>
        </div>
        <div
          class="c15"
          style="position: relative;"
        >
          <div
            class="c16"
          />
          <div
            class="c17"
            style="position: relative;"
          >
            <div
              class="c18"
              style="display: flex;"
            >
              <span
                class="c19 icon icon-chevroncircledown"
                color="text.muted"
              >
                <svg
                  fill="currentColor"
                  height="26"
                  viewBox="0 0 24 24"
                  width="26"
                >
                  <path
                    d="M8.78033 9.96967C8.48744 9.67678 8.01256 9.67678 7.71967 9.96967C7.42678 10.2626 7.42678 10.7374 7.71967 11.0303L11.4697 14.7803C11.7626 15.0732 12.2374 15.0732 12.5303 14.7803L16.2803 11.0303C16.5732 10.7374 16.5732 10.2626 16.2803 9.96967C15.9874 9.67678 15.5126 9.67678 15.2197 9.96967L12 13.1893L8.78033 9.96967Z"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M12 2.25C6.61522 2.25 2.25 6.61522 2.25 12C2.25 17.3848 6.61522 21.75 12 21.75C17.3848 21.75 21.75 17.3848 21.75 12C21.75 6.61522 17.3848 2.25 12 2.25ZM3.75 12C3.75 7.44365 7.44365 3.75 12 3.75C16.5563 3.75 20.25 7.44365 20.25 12C20.25 16.5563 16.5563 20.25 12 20.25C7.44365 20.25 3.75 16.5563 3.75 12Z"
                    fill-rule="evenodd"
                  />
                </svg>
              </span>
            </div>
            <div
              class="c9"
            >
              <b>
                Sam
              </b>
               
              <span>
                submitted
                 this request 
                1 minute ago
              </span>
            </div>
          </div>
          <div
            class="c20"
            style="position: relative;"
          >
            <div
              class="c21"
            >
              <div
                class="c22"
              >
                Sam
              </div>
              <div
                class="c23"
              >
                1 minute ago
              </div>
            </div>
            <div
              class="c24"
            >
              Testing long message format. I am requesting access for the developer role that i will be using to         commit fixes for our production application. I will need access for the         rest of the day to complete my changes.
            </div>
            <div
              class="c25"
            >
              <table
                class="c26 c27"
              >
                <thead>
                  <tr>
                    <th
                      style="cursor: default;"
                    >
                      Cluster Name
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Kind
                    </th>
                    <th
                      style="cursor: default;"
                    >
                      Requested Resource Name
                    </th>
                  </tr>
                </thead>
                <tbody>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      app-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      db
                    </td>
                    <td>
                      db-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      node
                    </td>
                    <td>
                      node-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      user_group
                    </td>
                    <td>
                      user-group-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      kube_cluster
                    </td>
                    <td>
                      kube-cluster-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      windows_desktop
                    </td>
                    <td>
                      windows-desktop-name
                    </td>
                  </tr>
                  <tr>
                    <td>
                      cluster-name
                    </td>
                    <td>
                      app
                    </td>
                    <td>
                      Some Friendly Name
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
          <div
            class="c28"
            style="position: relative;"
          >
            <div
              class="c29"
            >
              <div
                class="c30"
              >
                loggedInUsername
                 - add a review
              </div>
            </div>
            <div
              class="c24"
            >
              <div
                class="c31"
              >
                <div
                  class="c32"
                >
                  <label
                    class="c33"
                  >
                    <input
                      checked=""
                      class="c34"
                      name="requestState"
                      type="radio"
                      value="DENIED"
                    />
                    <span
                      class="c35"
                    >
                      Reject request
                    </span>
                  </label>
                  <label
                    class="c33"
                  >
                    <input
                      class="c34"
                      name="requestState"
                      type="radio"
                      value="APPROVED"
                    />
                    <span
                      class="c35"
                    >
                      Approve short-term access
                      
                    </span>
                  </label>
                  <label
                    class="c36"
                  >
                    <input
                      class="c34"
                      disabled=""
                      name="requestState"
                      type="radio"
                      value="PROMOTED"
                    />
                    <span
                      class="c37"
                    >
                      <span>
                        <div
                          class="c4"
                        >
                          <div
                            class="c38"
                          >
                            Approve long-term access via Access List with the requested resources
                          </div>
                          
                        </div>
                      </span>
                    </span>
                  </label>
                </div>
              </div>
              <div
                class="c39"
              >
                <label
                  class="c40"
                  font-size="0"
                >
                  Message
                </label>
                <textarea
                  class="c41"
                  color="text.main"
                  height="150px"
                  placeholder="Optional message..."
                  width="100%"
                />
              </div>
              <button
                class="c42"
                kind="primary"
              >
                Submit Review
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="c43"
    >
      <div
        class="c44"
      >
        <div
          class="c45"
        >
          Reviewers
        </div>
      </div>
      <div
        class="c46"
      >
        <div
          class="c47"
          style="white-space: nowrap; max-width: 200px;"
          title="alice"
        >
          alice
        </div>
        <span
          class="c48"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c46"
      >
        <div
          class="c47"
          style="white-space: nowrap; max-width: 200px;"
          title="bob"
        >
          bob
        </div>
        <span
          class="c48"
          font-size="0"
          font-weight="bold"
          kind="warning"
          style="min-height: 10px; min-width: 10px;"
          width="10px"
        />
      </div>
      <div
        class="c49"
      >
        <div
          class="c50"
          color="text.slightlyMuted"
        >
          Thresholds: 
          Default, Poplar, Admin
        </div>
      </div>
    </div>
  </div>
</div>
`;
